--- a/docroot/sites/all/themes/hwc_frontend/less/content.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/content.less
@@ -6277,6 +6277,19 @@ html:lang(hu) , html:lang(nl), html:lang(mt) {
 	#edit-send-for-approval{
 		margin-right: 10px !important;
 	}
+	table{
+		td.checkbox{
+			label{
+				margin-top: 0;
+    			padding-top: 0;
+			}
+			input[type="checkbox"] {
+			    max-width: inherit;
+			    padding-top: 0;
+			    margin-top: -4px;
+			}
+		}
+	}
 }
 
 .node-events-form{
