MDR-4206 - Home page text banners - responsive issue

--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -1681,7 +1681,7 @@ input[type="checkbox"]:checked + label .my-checkbox:after {
 }
 
 .page_title{
-	background: url(../images/banner-background-article.png);
+	background: url(../images/banner-background-article.png)  no-repeat #acc700;
 	padding-top: 0;
 	margin-bottom: 2em;
 	float: left;
@@ -5699,6 +5699,7 @@ ul[data-sa-theme="basic-green"].ui-menu{
     width: 288px;
     float: right;
     height: 100%;
+    clear: both;
     #edit-subscribe-details{
     	text-align: left !important;
     	padding-top: 1.5em;
@@ -7354,7 +7355,7 @@ body.front-page{
 			    }
 			
 				.views-row-first, .views-row-last{
-					background: url(../images/background-splash-box1.png) #94c000 !important;
+					background: url(../images/background-splash-box1.png) no-repeat #acc701!important;
 					float: left;
 					text-align: center;
 					padding-bottom: 0;
