--- a/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
+++ b/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
@@ -1434,7 +1434,7 @@ input[type="checkbox"]:checked + label .my-checkbox:after {
   width: 100%;
 }
 .page_title {
-  background: url(../images/banner-background-article.png);
+  background: url(../images/banner-background-article.png) no-repeat #acc700;
   padding-top: 0;
   margin-bottom: 2em;
   float: left;
@@ -5029,6 +5029,7 @@ ul[data-sa-theme="basic-green"].ui-menu {
   width: 288px;
   float: right;
   height: 100%;
+  clear: both;
 }
 #block-osha-newsletter-osha-newsletter-events-subscribe #edit-subscribe-details {
   text-align: left !important;
@@ -6516,7 +6517,7 @@ body.front-page .main-container #block-views-homepage-banners-block .view-homepa
 }
 body.front-page .main-container #block-views-homepage-banners-block .view-homepage-banners .views-row-first,
 body.front-page .main-container #block-views-homepage-banners-block .view-homepage-banners .views-row-last {
-  background: url(../images/background-splash-box1.png) #94c000 !important;
+  background: url(../images/background-splash-box1.png) no-repeat #acc701 !important;
   float: left;
   text-align: center;
   padding-bottom: 0;
