--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-min-1200.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-min-1200.less
@@ -71,7 +71,6 @@
 				.header-text:lang(de),
 				.header-text:lang(et),
 				.header-text:lang(fr),
-				.header-text:lang(hr),
 				.header-text:lang(is),
 				.header-text:lang(it),
 				.header-text:lang(lv),
@@ -84,6 +83,17 @@
 				.header-text:lang(ro){
 					font-size: 1em !important;
 					width: 300px!important;
+				}
+			}
+		}
+	}
+
+	header.navbar-default{
+		.campaigns-header{
+			.navbar-header{
+				.header-text:lang(hr){
+					font-size: 1em !important;
+					width: 200px!important;
 				}
 			}
 		}
