MDR-4247 - HWC Toolkit - Tablet: the green boxes are displaced (DE, BG, EL)

--- a/docroot/sites/all/themes/hwc_frontend/css/style.css
+++ b/docroot/sites/all/themes/hwc_frontend/css/style.css
@@ -19164,38 +19164,40 @@ input#edit-field-image-und-0-upload::before {
 .toolkit-page .main-container .start-here .resources-networks .col-inner h2:before {
   background-image: url(../images/toolkit-resources.png);
 }
-.toolkit-page .main-container .field-name-field-tk-topics .field-items .field-item {
+.toolkit-page .main-container .field-name-field-tk-topics .field-items > .field-item {
   margin-bottom: 30px;
   background-color: #f3f3f3;
+  position: relative;
 }
-.toolkit-page .main-container .field-name-field-tk-topics .field-items .field-item .node-tk-topic .group-left {
-  display: inline-block;
+.toolkit-page .main-container .field-name-field-tk-topics .field-items > .field-item .node-tk-topic .group-left {
+  float: left;
   width: 235px;
   height: 250px;
   background-color: grey;
 }
-.toolkit-page .main-container .field-name-field-tk-topics .field-items .field-item .node-tk-topic .group-left img {
+.toolkit-page .main-container .field-name-field-tk-topics .field-items > .field-item .node-tk-topic .group-left img {
   width: 100%;
 }
-.toolkit-page .main-container .field-name-field-tk-topics .field-items .field-item .node-tk-topic .group-right {
-  padding: 30px;
+.toolkit-page .main-container .field-name-field-tk-topics .field-items > .field-item .node-tk-topic .group-right {
+  float: left;
+  width: 67%;
+  padding: 0 1em;
   display: inline-block;
-  position: absolute;
-  width: inherit;
-  right: 0;
-  left: 234px;
 }
-.toolkit-page .main-container .field-name-field-tk-topics .field-items .field-item .node-tk-topic .group-right h3 {
+.toolkit-page .main-container .field-name-field-tk-topics .field-items > .field-item .node-tk-topic .group-right h3 {
   margin-top: 0px;
   font-size: 1.4em;
 }
-.toolkit-page .main-container .field-name-field-tk-topics .field-items .field-item .node-tk-topic .group-right .field-type-text-with-summary p {
+.toolkit-page .main-container .field-name-field-tk-topics .field-items > .field-item .node-tk-topic .group-right .field-type-text-with-summary p {
   font-weight: 600;
 }
-.toolkit-page .main-container .field-name-field-tk-topics .field-items .field-item .node-tk-topic .group-right .field-name-node-link {
+.toolkit-page .main-container .field-name-field-tk-topics .field-items > .field-item .node-tk-topic .group-right .field-type-text-with-summary .field-item {
+  margin-bottom: 0;
+}
+.toolkit-page .main-container .field-name-field-tk-topics .field-items > .field-item .node-tk-topic .group-right .field-name-node-link {
   text-align: right;
 }
-.toolkit-page .main-container .field-name-field-tk-topics .field-items .field-item .node-tk-topic .group-right .field-name-node-link a {
+.toolkit-page .main-container .field-name-field-tk-topics .field-items > .field-item .node-tk-topic .group-right .field-name-node-link a {
   background-color: #749b00;
   display: inline-block;
   text-align: center;
@@ -19205,8 +19207,14 @@ input#edit-field-image-und-0-upload::before {
   font-weight: 600;
   text-decoration: none;
 }
-.toolkit-page .main-container .field-name-field-tk-topics .field-items .field-item .node-tk-topic .group-right .field-name-node-link a:hover {
+.toolkit-page .main-container .field-name-field-tk-topics .field-items > .field-item .node-tk-topic .group-right .field-name-node-link a:hover {
   background-color: #595959;
+}
+.toolkit-page .main-container .field-name-field-tk-topics .field-items > .field-item .node-tk-topic .group-right .field-name-node-link .field-item {
+  position: absolute;
+  right: 20px;
+  bottom: 20px;
+  margin-bottom: 0;
 }
 .toolkit-page .main-container .view-tk-tools .h2.toolkit-h2 {
   padding-left: 15px;
@@ -19471,6 +19479,7 @@ input#edit-field-image-und-0-upload::before {
 }
 .toolkit-page .main-container .view-search-toolkit-examples #views-exposed-form-search-toolkit-examples-page .views-exposed-widget {
   width: 33%;
+  padding-bottom: 1em;
 }
 .toolkit-page .main-container .view-search-toolkit-examples #views-exposed-form-search-toolkit-examples-page .views-exposed-widget.views-widget-sort-by {
   display: none;
@@ -19493,8 +19502,8 @@ input#edit-field-image-und-0-upload::before {
   padding: 7px;
 }
 .toolkit-page .main-container .view-search-toolkit-examples #views-exposed-form-search-toolkit-examples-page .views-exposed-widget .form-item #edit-sort-order {
-  display: inline-block;
-  margin-top: 2rem;
+  display: block;
+  margin-top: 0;
   border-radius: 6px;
 }
 .toolkit-page .main-container .view-search-toolkit-examples #views-exposed-form-search-toolkit-examples-page .views-exposed-widget .form-item .chosen-container {
@@ -25988,17 +25997,27 @@ body.front .homepage-slider blockquote.image-field-caption p {
     display: none;
   }
   .toolkit-page .main-container .field-name-field-tk-topics > .field-items > .field-item .node-tk-topic .group-right {
-    padding: 30px 15px;
+    padding: 0 15px;
     position: relative;
     left: inherit;
     width: 100%;
   }
   .toolkit-page .main-container .field-name-field-tk-topics > .field-items > .field-item .node-tk-topic .group-right .field-name-node-link {
-    text-align: center;
-    margin-top: 30px;
+    position: relative;
+    float: right;
+    text-align: right;
+    margin-top: 0;
   }
   .toolkit-page .main-container .field-name-field-tk-topics > .field-items > .field-item .node-tk-topic .group-right .field-name-node-link .field-item {
+    position: relative;
     margin-bottom: 0px;
+    bottom: initial;
+    right: 0;
+    padding-bottom: 20px;
+    padding-right: 10px;
+  }
+  .toolkit-page .main-container .field-name-field-tk-topics > .field-items > .field-item .node-tk-topic .group-right .field-type-text-with-summary .field-item {
+    margin-bottom: 30px;
   }
   .toolkit-page .main-container .field-name-field-tk-topics > .field-items > .field-item .node-tk-topic .group-right .field-type-text-with-summary p {
     font-weight: 400;
