--- a/docroot/sites/all/themes/hwc_frontend/less/content.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/content.less
@@ -10809,6 +10809,9 @@ input#edit-field-image-und-0-upload::before {
 		margin-top: 20px;
 		overflow: hidden;
 		margin-bottom: 0;
+		float: left;
+		width: 100%;
+		padding-bottom: 5px;
 		.key-next-prev-buttons{
 			overflow: hidden;
 			.prev-button,
