--- a/docroot/sites/all/themes/hwc_frontend/less/responsive-max-767.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/responsive-max-767.less
@@ -21,7 +21,7 @@
       top: 0;
       z-index: 999999987;
       background: #FFF;
-      padding-bottom: 1em;
+      padding-bottom: 0;
       padding-top: 1em;
       width: 100%;
       margin-bottom: 0;
@@ -39,17 +39,16 @@
     padding-right: 15px;
   }
 
-/*
-  .toolkit-page .well #block-hwc-toolkit-toolkit-left-menu.sticky-toolkit.opened{
-  	height: 100%;
-    overflow-y: scroll;
-    padding-bottom: 9em;
-	}
-*/
 
-.toolkit-page .well #block-hwc-toolkit-toolkit-left-menu .key-menu-container > .menu.active{
-	display: block;
-}
+  .toolkit-page .main-container .above_title.sticky-toolkit {
+  	.page-header.sticky-toolkit{
+  		height: auto;
+  	}
+  }	
+
+	.toolkit-page .well #block-hwc-toolkit-toolkit-left-menu .key-menu-container > .menu.active{
+		display: block;
+	}
 
   .toolkit-page .well #block-hwc-toolkit-toolkit-left-menu .key-menu-container > ul{
     padding-left: 15px;
