--- a/docroot/sites/all/themes/hwc_frontend/less/content.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/content.less
@@ -9801,8 +9801,9 @@ input#edit-field-image-und-0-upload::before {
 						}
 
 						>a, >span{
+							position: relative;
 							border: 2px solid;
-							padding: 10px 15px;
+							padding: 10px 35px 10px 15px;
 							display: block;
 							margin-bottom: 15px;
 							border-radius: 3px;
@@ -9824,6 +9825,9 @@ input#edit-field-image-und-0-upload::before {
 						&.expanded{
 							>a, >span{
 								&:after{
+									position: absolute;
+									top: 25%;
+									right: 15px;
 									content:"\e250";
 									font-family: "Glyphicons Halflings";
 									float: right;
@@ -10157,12 +10161,13 @@ input#edit-field-image-und-0-upload::before {
 		//how to run list pages
 		.field-name-field-tk-topics{
 			.field-items{
-				.field-item{
+				> .field-item{
 					margin-bottom: 30px;
 					background-color: @bg-color-grey-toolkit;
+					position: relative;
 					.node-tk-topic{
 						.group-left{
-							display: inline-block;
+							float: left;
 							width: 235px;
 							height: 250px;
 							background-color: grey;
@@ -10171,12 +10176,10 @@ input#edit-field-image-und-0-upload::before {
 							}
 						}
 						.group-right{
-							padding: 30px;
+							float: left;
+							width: 67%;
+							padding: 0 1em;
 						    display: inline-block;
-						    position: absolute;
-						    width: inherit;
-						    right: 0;
-    						left: 234px;
 							h3{
 								margin-top: 0px;
 								font-size: 1.4em;
@@ -10185,8 +10188,10 @@ input#edit-field-image-und-0-upload::before {
 								p{
 									font-weight: 600;
 								}
+								.field-item{
+								    margin-bottom: 0;
+								}
 							}
-							//see more
 							.field-name-node-link{
 								text-align: right;
 								a{
@@ -10201,6 +10206,12 @@ input#edit-field-image-und-0-upload::before {
 									&:hover{
 										background-color: @hover-grey-button-toolkit;
 									}
+								}
+								.field-item{
+									position: absolute;
+									right: 20px;
+									bottom: 20px;
+								    margin-bottom: 0;
 								}
 							}
 						}
@@ -10493,6 +10504,7 @@ input#edit-field-image-und-0-upload::before {
 			#views-exposed-form-search-toolkit-examples-page{
 				.views-exposed-widget{
 					width: 33%;
+					padding-bottom: 1em;
 					&.views-widget-sort-by{
 						display: none;
 					}
@@ -10513,9 +10525,9 @@ input#edit-field-image-und-0-upload::before {
 						    padding: 7px;
 						}
 						#edit-sort-order{
-							display: inline-block;
-						    margin-top: 2rem;
-					        border-radius: 6px;
+							display: block;
+							margin-top: 0;
+							border-radius: 6px;
 						}
 						.chosen-container {
 							width: 100% !important;
@@ -10797,6 +10809,9 @@ input#edit-field-image-und-0-upload::before {
 		margin-top: 20px;
 		overflow: hidden;
 		margin-bottom: 0;
+		float: left;
+		width: 100%;
+		padding-bottom: 5px;
 		.key-next-prev-buttons{
 			overflow: hidden;
 			.prev-button,
