MDR-4333 - Private zone - Act as a partner: Edit News banner

--- a/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
+++ b/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
@@ -1455,6 +1455,9 @@ input[type="checkbox"]:checked + label .my-checkbox:after {
   justify-content: center;
   padding-bottom: 20px;
 }
+.page_title h1 em {
+  padding-right: 15px;
+}
 /* MHWC-525 - New Design for Partners' profile */
 body.fop .page_title,
 body.ocp .page_title,
