--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -1700,6 +1700,9 @@ input[type="checkbox"]:checked + label .my-checkbox:after {
     	align-items: center;
     	justify-content: center;
    	 	padding-bottom: 20px;
+   	 	em{
+   	 		padding-right: 15px;
+   	 	}
 	}
 }
 
